--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   flutter_bloc: ^8.1.4
   auto_route: ^7.8.4
+  responsive_framework: ^1.4.0
 
 dev_dependencies:
   flutter_test:
