--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   get_it: ^7.6.7
   provider: ^6.1.2
   rxdart: ^0.27.7
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  freezed: ^2.4.7
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
